<resources>
    <string name="app_name">Gazpacho</string>


    <!--USB -->

    <string name="btn_conn">Conectar impresora por USB</string>
    <string name="btn_start">OK, impresora conectada, comenzar </string>

    <string name="msg_getpermission">Conexion exitosa de impresora por USB </string>
    <string name="msg_conn_state">El dispositivo USB no tiene acceso, porfavor re-conecta</string>
    <string name="strLang">en</string>

    <!-- ********************************************* -->

    <!--ingredients -->

    <string name="question_mix1">Opcion para poner nombre segun la fruta del dia GAZPACHO</string>
    <string name="question_mix2">Opcion para poner nombre segun la fruta del dia FRUTA TROZOS GRANDES</string>

    <string name="question_ingredients">Selecciona los ingredientes deseados y presiona CONTINUAR.</string>


    <string name="next_button">Continuar</string>

    <string name="ingredients_toast">Ingredientes seleccionados</string>


    <!-- ********************************************* -->

    <!--price -->

    <string name="gazpacho_price">Precios de GAZPACHO</string>
    <string name="fruit_price">Precios de FRUTA picada</string>

    <!-- ********************************************* -->


    <!--Language -->

    <string name="big_toast">Gazpacho grande</string>
    <string name="medium_toast">Gazpacho mediano</string>
    <string name="small_toast">Gazpacho chico</string>

    <string name="Spanish_button">Español</string>
    <string name="English_button">English</string>
    <string name="French_button">Français</string>

    <string name="Spanish_toast">En español</string>
    <string name="English_toast">English language</string>
    <string name="French_toast">langue Français</string>


    <!-- ********************************************* -->


    <!-- Choice -->

    <string name="Choice_text_view">Selecciona en que presentacion deseas tu fruta preparada, que consta de una ensalada agridulce refrescante con fruta y verdura de temporada.</string>

    <string name="fruit_button">Vaso de fruta</string>
    <string name="gazpacho_button">Gazpacho Moreliano</string>


    <string name="gazpacho_toast">Gazpacho Moreliano</string>
    <string name="fruit_toast">Vaso de fruta</string>

    <!-- ********************************************* -->


    <!-- Size -->

    <string name="small_hint">Ingresa precio tamaño chico.</string>
    <string name="medium_hint">Ingresa precio tamaño medino.</string>
    <string name="big_hint">Ingresa precio tamaño grande.</string>

    <string name="question_price_size">Selecciona el tamaño.</string>

    <!-- ********************************************* -->

    <!-- Takeaway -->

    <string name="question_takeaway">Es para comer aquí o es para llevar?</string>

    <string name="here_button">Para comer aqui</string>
    <string name="takeaway_button">Es para llevar</string>

    <string name="here_toast">para aqui</string>
    <string name="takeaway_toast">para llevar</string>

    <!-- ********************************************* -->


    <!-- Order -->

    <string name="details_label">Selecciona ORDENAR para confirmar la venta entrega el ticket al cajero\n\no Selecciona REGRESAR para volver a escoger nuevamente\n\nDetalles de la venta:</string>

    <string name="date">Fecha:</string>

    <string name="home_button">REGRESAR</string>
    <string name="order_button">ORDENAR</string>

    <!-- ********************************************* -->

    <!-- English Choice -->

    <string name="english_Choice_text_view">Select how you want to prepare your order, consisting of a sweet and sour salad with seasonal fruit and vegetables.</string>

    <string name="english_fruit_button">Slice fruit</string>
    <string name="english_gazpacho_button">Gazpacho Moreliano</string>


    <string name="english_gazpacho_toast">Gazpacho Moreliano</string>
    <string name="english_fruit_toast">fruit slice</string>

    <!-- ********************************************* -->

    <!-- ********************************************* -->

    <!--English ingredients -->

    <string name="english_question_ingredients">Select the desired ingredients and press NEXT.</string>

    <string name="english_next_button">next</string>

    <string name="english_ingredients_toast">ingrédients choisis</string>

    <!-- ********************************************* -->

    <!-- English Size -->

    <string name="english_question_price_size">Select size</string>

    <!-- ********************************************* -->

    <!-- English Takeaway -->

    <string name="english_question_takeaway">Is that for here or to go?</string>

    <string name="english_here_button">that is to stay</string>
    <string name="english_takeaway_button">to take away</string>

    <string name="english_here_toast">that is to stay</string>
    <string name="english_takeaway_toast">to take away</string>

    <!-- ********************************************* -->


    <!-- English Order -->

    <string name="english_details_label">Select ORDER to confirm the sales, delivery ticket to cashier\n\nor select BACK TO MAIN to back to choose again\n\nSale details:</string>

    <string name="english_date">Date:</string>

    <string name="english_home_button">BACK TO MAIN</string>
    <string name="english_order_button">ORDER</string>

    <!-- ********************************************* -->


    <!-- French Choice -->

    <string name="french_Choice_text_view">Choisissez comment vous souhaitez que votre commande est préparée, composé d une salade rafraîchissante aigre-douce avec des fruits et légumes de saison.</string>

    <string name="french_fruit_button">tranches de fruits</string>
    <string name="french_gazpacho_button">Gazpacho Moreliano</string>


    <string name="french_gazpacho_toast">Gazpacho Moreliano</string>
    <string name="french_fruit_toast">tranches de fruits</string>

    <!-- ********************************************* -->

    <!--French ingredients -->

    <string name="french_question_ingredients">Sélectionnez les ingrédients souhaités et appuyez sur PROCHAIN.</string>

    <string name="french_next_button">prochain</string>

    <string name="french_ingredients_toast">ingrédients sélectionnés</string>


    <!-- ********************************************* -->

    <!-- French Size -->

    <string name="french_question_price_size">Sélectionnez la taille.</string>

    <!-- ********************************************* -->

    <!-- French Takeaway -->

    <string name="french_question_takeaway">Il est de manger ici ou aller?</string>

    <string name="french_here_button">manger ici</string>
    <string name="french_takeaway_button">A emporter</string>

    <string name="french_here_toast">manger ici</string>
    <string name="french_takeaway_toast">A emporter</string>

    <!-- ********************************************* -->

    <!-- French Order -->

    <string name="french_details_label">Sélectionnez ORDONNER pour confirmer les ventes, bon de livraison à destituer\n\nou sélectionnez RETOUR À LA pour sauvegarder de choisir à nouveau.\n\n Detalles vente:</string>

    <string name="french_date">Date:</string>

    <string name="french_home_button">RETOUR À LA</string>
    <string name="french_order_button">ORDONNER</string>

        <!-- ********************************************* -->
</resources>
