<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top"
              android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="50dp"
        android:text="@string/fruit_price"/>

    <EditText
        android:id="@+id/small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_margin="16dp"
        android:hint="@string/small_hint"/>

    <EditText
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_margin="16dp"
        android:hint="@string/medium_hint"/>

    <EditText
        android:id="@+id/big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_margin="16dp"
        android:hint="@string/big_hint"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="50dp"
            android:layout_weight="1"
            android:text="@string/next_button"/>

    </LinearLayout>

</LinearLayout>