<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/Spanish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Spanish_button"
            android:layout_margin="16dp"
            android:textSize="50dp"/>

        <Button
            android:id="@+id/English_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/English_button"
            android:layout_margin="16dp"
            android:textSize="50dp"/>

        <Button
            android:id="@+id/French_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/French_button"
            android:layout_margin="16dp"
            android:textSize="50dp"/>

    </LinearLayout>

</LinearLayout>
