<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top"
              android:orientation="vertical">

    <TextView
        android:id="@+id/details_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="30dp"
        android:text="@string/english_details_label"
        style="?android:listSeparatorTextViewStyle"/>


    <TextView
        android:id="@+id/choice_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textStyle="bold"
        android:padding="24dp"/>

    <TextView
        android:id="@+id/ingredients_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textStyle="bold"
        android:padding="24dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:listSeparatorTextViewStyle">

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="50dp"
            android:layout_weight="1"

            android:text="@string/english_home_button"/>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="50dp"
            android:layout_weight="1"

            android:text="@string/english_order_button"/>

    </LinearLayout>

</LinearLayout>